# smartAiChatBot

./: .env.example  .gitignore  README.md  clientRequirement.md  error.md  pyproject.toml  smart_ai_agent_roadmap.md
app/: config.py  main.py
app/agent/: memory.py  prompts.py  router.py
app/api/routes/: chat.py  ingest.py
app/models/: chat.py  ingest.py
app/rag/: embeddings.py  ingestion.py  retriever.py
app/tools/: order_status.py  product_search.py  registry.py  weather.py
app/vector_store/: qdrant_client.py
data/: orders.json  products.json
data/sample_docs/: studio_butterfly.txt
scripts/: ingest_file.py
tests/: test_api.py  test_rag.py  test_router.py  test_tools.py
